Fix overflow and scaling problems

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -57,8 +57,8 @@ $utilities: map-merge($utilities,
 
 h1 {
   font-family: 'Roboto', sans-serif;
-  // font-size: 2.5rem;
-  font-weight: 700;
+  font-weight: 800;
+  font-size: 4rem;
 }
 
 img {
